@@ -125,7 +125,7 @@ export(revolver.d, revolver.ad, revolver.ade, revolver.e, revolver.de, revolver.
        revolver.dl, revolver.el, revolver.r, revolver.ar, revolver.di, revolver.adi,
        revolver.il, revolver.ir, revolver.air)
 
-export (revolver.d.d)
+export (revolver.d.d, revolver.p.p)
 
 export (evolver.d)
 
