@@ -1,3 +1,8 @@
+2007-05-11  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/revolver.R (revolver.p.p) : added
+	* interfaces/R/src/rinterface.c (R_igraph_revolver_p_p) : added
+
 2007-05-09  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/revolver.R (evolver.d) : added
